@@ -5,26 +5,25 @@ import com.putoet.grid.Point;
 import com.putoet.search.GenericSearch;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-public class RoomFinder {
+class RoomFinder {
     private final Grid grid;
     private final Point start;
 
     public RoomFinder(Grid grid) {
         this.grid = grid;
 
-        final Optional<Point> x = grid.findFirst(c -> c == 'X');
+        final var x = grid.findFirst(c -> c == 'X');
         assert x.isPresent();
 
         this.start = x.get();
     }
 
     protected Optional<GenericSearch.Node<Point>> routeTo(Room room) {
-        return GenericSearch.bfs(start, p->p.equals(room.location), p -> {
-            final List<Point> nextPoints = new ArrayList<>();
-            for (Point direction : Point.directions(true)) {
-                Point next = p.add(direction);
+        return GenericSearch.bfs(start, p -> p.equals(room.location), p -> {
+            final var nextPoints = new ArrayList<Point>();
+            for (var direction : Point.directions(true)) {
+                var next = p.add(direction);
                 if (grid.contains(next.x(), next.y()) && Door.isDoor(grid.get(next.x(), next.y()))) {
                     next = next.add(direction);
                     if (!Room.isRoom(grid.get(next.x(), next.y())))
@@ -42,7 +41,7 @@ public class RoomFinder {
     }
 
     public long distantRooms(int distance) {
-        return doorsTo(rooms()).stream().filter(i ->i >= distance).count();
+        return doorsTo(rooms()).stream().filter(i -> i >= distance).count();
     }
 
     public List<Integer> doorsTo(List<Room> rooms) {
@@ -50,19 +49,17 @@ public class RoomFinder {
                 .map(this::doorsTo)
                 .filter(OptionalInt::isPresent)
                 .map(OptionalInt::getAsInt)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public OptionalInt doorsTo(Room room) {
-        final Optional<GenericSearch.Node<Point>> route = routeTo(room);
-        if (route.isEmpty())
-            return OptionalInt.empty();
-        return OptionalInt.of(route.get().steps());
+        final var route = routeTo(room);
+        return route.map(pointNode -> OptionalInt.of(pointNode.steps())).orElseGet(OptionalInt::empty);
     }
 
     public List<Room> rooms() {
         return grid.findAll(c -> c == Room.SYMBOL).stream()
                 .map(Room::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
